; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/cxd2880/extr_cxd2880_top.c_cxd2880_read_signal_strength.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/cxd2880/extr_cxd2880_top.c_cxd2880_read_signal_strength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.dtv_frontend_properties, %struct.cxd2880_priv* }
%struct.dtv_frontend_properties = type { i64 }
%struct.cxd2880_priv = type { i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"invalid arg\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@SYS_DVBT = common dso_local global i64 0, align 8
@SYS_DVBT2 = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [16 x i8] c"invalid system\0A\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"ret = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @cxd2880_read_signal_strength to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cxd2880_read_signal_strength(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dvb_frontend*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.cxd2880_priv*, align 8
  %8 = alloca %struct.dtv_frontend_properties*, align 8
  %9 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.cxd2880_priv* null, %struct.cxd2880_priv** %7, align 8
  store %struct.dtv_frontend_properties* null, %struct.dtv_frontend_properties** %8, align 8
  store i32 0, i32* %9, align 4
  %10 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %11 = icmp ne %struct.dvb_frontend* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %19, label %15

15:                                               ; preds = %12, %2
  %16 = call i32 @pr_err(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %73

19:                                               ; preds = %12
  %20 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %21 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %20, i32 0, i32 1
  %22 = load %struct.cxd2880_priv*, %struct.cxd2880_priv** %21, align 8
  store %struct.cxd2880_priv* %22, %struct.cxd2880_priv** %7, align 8
  %23 = load %struct.dvb_frontend*, %struct.dvb_frontend** %4, align 8
  %24 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %23, i32 0, i32 0
  store %struct.dtv_frontend_properties* %24, %struct.dtv_frontend_properties** %8, align 8
  %25 = load %struct.cxd2880_priv*, %struct.cxd2880_priv** %7, align 8
  %26 = getelementptr inbounds %struct.cxd2880_priv, %struct.cxd2880_priv* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @mutex_lock(i32 %27)
  %29 = load %struct.dtv_frontend_properties*, %struct.dtv_frontend_properties** %8, align 8
  %30 = getelementptr inbounds %struct.dtv_frontend_properties, %struct.dtv_frontend_properties* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @SYS_DVBT, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %40, label %34

34:                                               ; preds = %19
  %35 = load %struct.dtv_frontend_properties*, %struct.dtv_frontend_properties** %8, align 8
  %36 = getelementptr inbounds %struct.dtv_frontend_properties, %struct.dtv_frontend_properties* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @SYS_DVBT2, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %34, %19
  %41 = load %struct.cxd2880_priv*, %struct.cxd2880_priv** %7, align 8
  %42 = getelementptr inbounds %struct.cxd2880_priv, %struct.cxd2880_priv* %41, i32 0, i32 1
  %43 = call i32 @cxd2880_tnrdmd_mon_rf_lvl(i32* %42, i32* %9)
  store i32 %43, i32* %6, align 4
  br label %52

44:                                               ; preds = %34
  %45 = call i32 (i8*, ...) @pr_debug(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %46 = load %struct.cxd2880_priv*, %struct.cxd2880_priv** %7, align 8
  %47 = getelementptr inbounds %struct.cxd2880_priv, %struct.cxd2880_priv* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @mutex_unlock(i32 %48)
  %50 = load i32, i32* @EINVAL, align 4
  %51 = sub nsw i32 0, %50
  store i32 %51, i32* %3, align 4
  br label %73

52:                                               ; preds = %40
  %53 = load %struct.cxd2880_priv*, %struct.cxd2880_priv** %7, align 8
  %54 = getelementptr inbounds %struct.cxd2880_priv, %struct.cxd2880_priv* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @mutex_unlock(i32 %55)
  %57 = load i32, i32* %9, align 4
  %58 = sdiv i32 %57, 125
  store i32 %58, i32* %9, align 4
  %59 = load i32, i32* %9, align 4
  %60 = call i32 @clamp(i32 %59, i32 -840, i32 -240)
  store i32 %60, i32* %9, align 4
  %61 = load i32, i32* %9, align 4
  %62 = add nsw i32 %61, 840
  %63 = mul nsw i32 %62, 65535
  %64 = sdiv i32 %63, 600
  %65 = load i32*, i32** %5, align 8
  store i32 %64, i32* %65, align 4
  %66 = load i32, i32* %6, align 4
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %71

68:                                               ; preds = %52
  %69 = load i32, i32* %6, align 4
  %70 = call i32 (i8*, ...) @pr_debug(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 %69)
  br label %71

71:                                               ; preds = %68, %52
  %72 = load i32, i32* %6, align 4
  store i32 %72, i32* %3, align 4
  br label %73

73:                                               ; preds = %71, %44, %15
  %74 = load i32, i32* %3, align 4
  ret i32 %74
}

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @mutex_lock(i32) #1

declare dso_local i32 @cxd2880_tnrdmd_mon_rf_lvl(i32*, i32*) #1

declare dso_local i32 @pr_debug(i8*, ...) #1

declare dso_local i32 @mutex_unlock(i32) #1

declare dso_local i32 @clamp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
